2007-07-25  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.Gui/UserPasswordDialog.cs:
	Close the dialog when the user hits Enter in the Password field (or User field if no passwd is needed).

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Dialogs/SelectRepositoryDialog.cs:
	  Load repository info in a background thread.

2007-07-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  The result_rev parameter of svn_client_checkout is not a
	  svn_opt_revision_t, but a svn_revnum_t. Might fix bug #81870.

2007-07-19  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlProjectService.cs:
	Lluis' previous change is not actually needed.

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlFileSystemExtension.cs
	(NotifyFileChanged): Implemented. Fixes bug #81910.

2007-07-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlProjectService.cs:
	  Notify file changes as version control status changes. Fixes bug
	  #81910.

2007-07-19  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.VersionControl/VersionControl.addin.xml: Set the
	category for the version-control commands so they look all nice
	and pretty in the key-binding manager :)

2007-07-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl.Dialogs/SelectRepositoryDialog.cs:
	  Use the log service for logging errors.
	* MonoDevelop.VersionControl/gtk-gui/gui.stetic: Updated.
