@@ -1,3 +1,9 @@
+2007-07-26  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Statuses.cs:
+	  Reset the global comment of the changeset before committing. Fixes
+	  bug #82172.
+
 2007-07-25  Jeffrey Stedfast  <fejj@novell.com>
 
 	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.Gui/UserPasswordDialog.cs:
